bug fixed in slot booking

--- a/src/app/component/experts/sidebar/sidebar.component.html
+++ b/src/app/component/experts/sidebar/sidebar.component.html
@@ -32,11 +32,27 @@
                         <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">Chats</p>
                     </a>
                 </li>
-                <li class="-mb-1">
+                <li class="-mb-1 hidden">
                     <a routerLink="/experts/reviews">
                         <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">review</p>
                     </a>
                 </li>
+                <li class="-mb-1 hidden">
+                    <a routerLink="/experts/reviews">
+                        <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">review</p>
+                    </a>
+                </li>
+                <li class="-mb-1 hidden">
+                    <a routerLink="/experts/reviews">
+                        <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">review</p>
+                    </a>
+                </li>
+                <li class="-mb-1">
+                    <a (click)="logout()">
+                        <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">sign out</p>
+                    </a>
+                </li>
+
                 <!-- Add more sidebar links as needed -->
             </ul>
         </div>
