--- a/src/app/component/users/view-expert/view-expert.component.html
+++ b/src/app/component/users/view-expert/view-expert.component.html
@@ -98,7 +98,7 @@
                                         </div>
 
                                         <div class="pl-6 pt-10 flex items-center">
-                                            <button (click)="BookChat()"
+                                            <button
                                                 class="py-3 inline-flex items-center   px-16 bg-[#059669] border font-medium border-[#059669] text-[#059669] rounded-lg  hover:translate-y-1/2 hover:ease-in-out duration-300 ">
                                                 <svg class="w-[18px] h-[18px] text-white dark:text-white"
                                                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
