--- a/src/app/component/users/appoinments/appoinments.component.html
+++ b/src/app/component/users/appoinments/appoinments.component.html
@@ -54,8 +54,9 @@
             </div>
 
         </ng-container>
+        <!-- previouse schedules -->
         <ng-container *ngIf="previouseSchedules">
-            <div class="flex justify-center">
+            <div class="flex justify-center" *ngFor="let item of previouseAppoinments">
                 <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
 
 
@@ -65,9 +66,13 @@
                             class="h-12 w-12 rounded-lg object-cover" />
 
                         <div class="flex space-x-16">
-                            <p class="font-medium text-black">Carol Daines</p>
-                            <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines </span>
-                                conducted at 1 day ago </p>
+                            <p class="font-medium text-black">{{item.expert.name}}</p>
+                            <p class="text-gray-500">Session
+                                Conducted On <span
+                                    class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
+                                    }}</span> At
+                                <span class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
+                            </p>
                             <div class="mr-5 pr-10">
 
                             </div>
@@ -77,50 +82,7 @@
 
                 </div>
             </div>
-            <div class="flex justify-center">
-                <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
 
-
-                    <div class="flex items-center gap-4 pl-4 ">
-                        <img alt="Women"
-                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                            class="h-12 w-12 rounded-lg object-cover" />
-
-                        <div class="flex space-x-16">
-                            <p class="font-medium text-black">Carol Daines</p>
-                            <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines </span>
-                                conducted at 1 day ago </p>
-                            <div class="mr-5 pr-10">
-
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="flex justify-center">
-                <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
-
-
-                    <div class="flex items-center gap-4 pl-4 ">
-                        <img alt="Women"
-                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                            class="h-12 w-12 rounded-lg object-cover" />
-
-                        <div class="flex space-x-16">
-                            <p class="font-medium text-black">Carol Daines</p>
-                            <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines </span>
-                                conducted at 1 day ago </p>
-                            <div class="mr-5 pr-10">
-
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
 
 
         </ng-container>
