--- a/src/app/component/users/slots/slots.component.html
+++ b/src/app/component/users/slots/slots.component.html
@@ -1,12 +1,59 @@
-<div class="p-4 flex-col space-x-2 space-y-4 ml-32 flex-grow">
-    <ng-container *ngFor="let item of  slots">
-        <button (click)="payNow(item._id)"
-            class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-            <span
-                class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                {{item.slot_time}}
-            </span>
-        </button>
+<div class="mb-3  flex space-x-8 ml-32 p-4 pt-0">
+
+    <div> <button class="bg-transparent text-base "
+            [ngClass]="{'border-b-4 border-orange-500 font-medium ': showtodaySlots}"
+            (click)="showToday()">Today</button>
+    </div>
+    <div> <button class="bg-transparent text-base"
+            [ngClass]="{'border-b-4 border-orange-500 font-medium ' :  showtommorowSlot}"
+            (click)="showTomorrow()">Tomorrow
+        </button></div>
+
+
+</div>
+
+
+
+
+<div class="p-4 pt-0 flex-col space-x-2 space-y-4 ml-32 flex-grow">
+
+
+    <ng-container *ngIf="showtodaySlots ">
+        <ng-container *ngIf="slots ;else nocontent">
+            <ng-container *ngFor="let item of slots?.slotes">
+                <button (click)="payNow(item._id)"
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
+                    <span
+                        class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                        {{item.slot_time}}
+                    </span>
+                </button>
+            </ng-container>
+        </ng-container>
+
     </ng-container>
+    <ng-container *ngIf="showtommorowSlot ">
+        <ng-container *ngIf="slotTomorrow;else nocontent">
+            <ng-container *ngFor="let item of slotTomorrow.slotes">
+                <button (click)="payNow(item._id)"
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
+                    <span
+                        class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                        {{item.slot_time}}
+                    </span>
+                </button>
+            </ng-container>
+        </ng-container>
+
+
+    </ng-container>
+
+
+    <ng-template #nocontent>
+
+        <p class="text-orange-500 font-medium text-base">No Slots Available Right Now</p>
+
+    </ng-template>
+
 
 </div>
