--- a/src/app/component/users/home/home.component.html
+++ b/src/app/component/users/home/home.component.html
@@ -30,9 +30,8 @@
 
 
 
-                <button
-                    class="bg-orange-500  hover:bg-orange-600 active:bg-orange-700 focus:outline-none focus:ring-orange-300 text-white py-2 px-8 rounded-lg my-8 mx-5 "
-                    (click)="navigateToExpertListing()">Talk
+                <button (click)="navigateToExpertListing()"
+                    class="bg-orange-500  hover:bg-orange-600 active:bg-orange-700 focus:outline-none focus:ring-orange-300 text-white py-2 px-8 rounded-lg my-8 mx-5 ">Talk
                     To
                     Expert</button>
             </div>
@@ -180,9 +179,12 @@
                     class="font-regular text-base text-gray-700 max-w-[450px] mt-6 text-center md:text-lg md:text-left leading-[1.5rem]">
                     Come be a part of our safe, supportive &amp; inclusive community. Share your thoughts and feelings,
                     to get words of encouragement from fellow users.</p>
-                <button
-                    class="  my-7  bg-orange-500  hover:bg-orange-600 active:bg-orange-700 focus:outline-none focus:ring-orange-300 text-white py-3 px-20 rounded-lg "
-                    (click)="navigateTocommunity()">
+
+
+
+
+                <button (click)="navigateTocommunity()"
+                    class="  my-7  bg-orange-500  hover:bg-orange-600 active:bg-orange-700 focus:outline-none focus:ring-orange-300 text-white py-3 px-20 rounded-lg ">
                     Share Thought</button>
                 <div class="flex justify-start space-x-6 pt-6 relative z-20">
                     <div>
@@ -333,6 +335,8 @@
                 </div>
             </div>
         </div>
+
+
         <button (click)="check()" class="bg-slate-950 text-white">check</button>
     </section>
 
