--- a/src/app/component/users/profile/profile.component.html
+++ b/src/app/component/users/profile/profile.component.html
@@ -55,8 +55,10 @@
 
                         </div>
                         <div class="pt-6">
+
+
                             <button type="button" data-modal-target="authentication-modal"
-                                (click)="editProfiledata(userDetails._id)" data-modal-toggle="authentication-modal"
+                                data-modal-toggle="authentication-modal" (click)="editProfiledata(userDetails._id)"
                                 class="text-orange-500 hover:text-white border border-red-700 hover:bg-orange-500 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-6 py-1 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Edit</button>
                         </div>
                     </div>
