--- a/src/app/component/experts/sidebar/sidebar.component.html
+++ b/src/app/component/experts/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
-<!-- responsive-sidebar.component.html -->
 <aside>
-    <div class="flex h-screen ">
+    <div class="flex h-screen fixed ">
         <!-- Sidebar for Medium Screens -->
-        <div class="bg-orange-300 shadow-2xl  text-white w-64 p-4 md:block max-md:hidden m-7 rounded-xl">
+        <div
+            class="bg-gradient-to-t from-pink-400 via-pink-500 to-pink-600  focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800  shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium  opacity-95  shadow-2xl  text-white w-52 p-4 md:block max-md:hidden m-7  ml-9 rounded-2xl">
             <ul class="text-base font-medium">
                 <li class="mb-8">
                     <a>
                         <div class="flex space-x-2">
                             <img src="../../../../assets/image/Groupnow me logo.png" class="h-[25px] " alt="">
-                            <p class="text-lg font-bold  text-orange-500"> Expert Panel</p>
+
                         </div>
                     </a>
                 </li>
