--- a/src/app/component/experts/expert-home/expert-home.component.html
+++ b/src/app/component/experts/expert-home/expert-home.component.html
@@ -1,11 +1,187 @@
-<div class="flex">
+<div class="flex bg-cover bg-center h-full"
+    style=" background-image: url('../../../../assets/image/admindashboard.png')">
     <app-sidebar></app-sidebar>
-    <main class="min-w-0 flex-1 overflow-auto bg-slate-300 pt-12">Content
+    <main class=" min-w-0 flex-1 overflow-auto pt-16 ml-80  ">
+
+        <div class="  fixed rounded-2xl top-0 z-20 shadow-lg bg-white border w-fit  p-10 pl-5 pr-6 ">
+            <div class="flex -mt-6  ">
+                <div class>
+                    <div class="text-base font-bold text-black">Over View</div>
+                    <div></div>
+                </div>
 
 
+            </div>
+            <div class="flex space-x-14   ">
+
+                <div
+                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium opacity-95">
+
+                    <p>dfkjrhfiruhgir</p>
+                </div>
+                <div
+                    class="mt-5 p-5 rounded-lg  bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium   opacity-95">
+
+                    <p>dfkjrhfiruhgir</p>
+                </div>
+                <div
+                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium  opacity-95">
+
+                    <p>dfkjrhfiruhgir</p>
+                </div>
+                <div
+                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium  opacity-95">
+
+                    <p>dfkjrhfiruhgir</p>
+                </div>
+                <div
+                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium  opacity-95">
+
+                    <p>dfkjrhfiruhgir</p>
+                </div>
+                <div
+                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 dark:shadow-lg dark:shadow-lime-800/80 font-medium  opacity-95">
+
+                    <p>dfkjrhfiruhgir</p>
+                </div>
 
 
+            </div>
 
-        
+
+        </div>
+        <div class="flex space-x-10 mt-32">
+
+            <div class="rounded-2xl  shadow-lg   border w-fit  p-5  mt-5    ">
+                <app-piechart></app-piechart>
+            </div>
+            <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit    ">
+                <table
+                    class="w-fit m-5 z-0 text-sm text-left border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
+                    <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
+                        <tr>
+                            <th scope="col" class="px-6 py-3">
+                                No
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Name
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Email
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Phone
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Date of Joined
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Block
+                            </th>
+                            <!-- <th scope="col" class="px-6 py-3">
+                                <span class="sr-only">Edit</span>
+                            </th> -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr
+                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
+                            <td class="px-6 py-4 text-gray-900 font-medium">
+
+                            </td>
+                            <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+
+                            </td>
+                            <td class="px-6 py-4 text-gray-900 font-medium ">
+
+                            </td>
+                            <td class="px-6 py-4 text-gray-900 font-medium">
+
+                            </td>
+                            <td class="px-6 py-4 text-gray-900 font-medium">
+
+
+                            </td>
+                            <td class="px-6 py-4">
+
+                            </td>
+                            <!-- <td class="px-6 py-4 text-right">
+                                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td> -->
+                        </tr>
+
+
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+
+        <div class="flex space-x-10 mt-5 mb-10">
+            <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  p-5  ">
+                <app-barchart></app-barchart>
+            </div>
+
+            <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit    ">
+                <table
+                    class="w-fit m-5 text-sm text-left border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
+                    <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
+                        <tr>
+                            <th scope="col" class="px-6 py-3">
+                                No
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Name
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Email
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Phone
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Date of Joined
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Block
+                            </th>
+                            <!-- <th scope="col" class="px-6 py-3">
+                            <span class="sr-only">Edit</span>
+                        </th> -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr
+                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
+                            <td class="px-6 py-4 text-gray-900 font-medium">
+
+                            </td>
+                            <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+
+                            </td>
+                            <td class="px-6 py-4 text-gray-900 font-medium ">
+
+                            </td>
+                            <td class="px-6 py-4 text-gray-900 font-medium">
+
+                            </td>
+                            <td class="px-6 py-4 text-gray-900 font-medium">
+
+
+                            </td>
+                            <td class="px-6 py-4">
+
+                            </td>
+                            <!-- <td class="px-6 py-4 text-right">
+                            <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                        </td> -->
+                        </tr>
+
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </main>
 </div>
