--- a/src/app/component/users/profile/profile.component.html
+++ b/src/app/component/users/profile/profile.component.html
@@ -57,8 +57,7 @@
                         <div class="pt-6">
 
 
-                            <button type="button" data-modal-target="authentication-modal"
-                                data-modal-toggle="authentication-modal" (click)="editProfiledata(userDetails._id)"
+                            <button type="button" (click)="editProfiledata(userDetails._id)"
                                 class="text-orange-500 hover:text-white border border-red-700 hover:bg-orange-500 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-6 py-1 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Edit</button>
                         </div>
                     </div>
@@ -285,15 +284,18 @@
 
 
 <!-- Main modal -->
-<div id="authentication-modal" tabindex="-1" aria-hidden="true"
-    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-48 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-[100vh]"
+<div [ngClass]="{'hidden': !modalOpen1}"
+    class="fixed ml-64 -mt-36 top-0  z-50 hidden w-full p-48 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-[100vh]"
     style="top: 80px;">
     <div class="relative w-full max-w-2xl max-h-[80vh]">
         <!-- Modal content -->
+        <!-- Background overlay -->
+        <div class="fixed inset-0 transition-opacity" (click)="closeModal1()">
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+        </div>
         <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-            <button type="button" (click)="closeModal()"
-                class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                data-modal-hide="authentication-modal">
+            <button type="button" (click)="closeModal1()"
+                class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
                 <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                     viewBox="0 0 14 14">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
