--- a/src/app/component/admin/list-experts/list-experts.component.html
+++ b/src/app/component/admin/list-experts/list-experts.component.html
@@ -1,4 +1,5 @@
-<div class="flex bg-cover bg-center  " style=" background-image: url('../../../../assets/image/admindashboard.png'); ">
+<div class="flex bg-cover bg-center h-full "
+    style=" background-image: url('../../../../assets/image/admindashboard.png'); ">
     <app-navsidebar></app-navsidebar>
     <main class=" min-w-0 flex-1 overflow-auto pt-28 ml-96 ">
         <!-- table -->
