--- a/src/app/component/experts/sidebar/sidebar.component.html
+++ b/src/app/component/experts/sidebar/sidebar.component.html
@@ -32,6 +32,11 @@
                         <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">Chats</p>
                     </a>
                 </li>
+                <li class="-mb-1">
+                    <a routerLink="/experts/profile">
+                        <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">Profile</p>
+                    </a>
+                </li>
                 <li class="-mb-1 hidden">
                     <a routerLink="/experts/reviews">
                         <p class="mb-4 hover:bg-orange-100 hover:text-black py-2 px-2 rounded-lg">review</p>
