--- a/src/app/component/experts/view-appoinments/view-appoinments.component.html
+++ b/src/app/component/experts/view-appoinments/view-appoinments.component.html
@@ -1,6 +1,7 @@
-<div class="flex">
+<div class="flex bg-cover bg-center h-full"
+    style=" background-image: url('../../../../assets/image/admindashboard.png')">
     <app-sidebar class="fixed "></app-sidebar>
-    <main class="min-w-0 flex-1 overflow-auto bg-white pt-12">
+    <main class="min-w-0 flex-1 overflow-auto  pt-12">
 
 
 
